# anda-erp-alpha

./: .env.dev  .env.example  .env.prod  .gitignore  main.py  pyproject.toml
.github/: copilot-instructions.md
app/api/: __init__.py  user.py
app/core/cache/: README.md  __init__.py  decorators.py  prefixes.py  redis.py
app/core/database/: __init__.py  postgresql.py
app/core/events/: __init__.py  shutdown.py  startup.py
app/core/log/: __init__.py  log_loguru.py
app/dependencies/: db.py
app/enums/: README.md  __init__.py  common.py
app/exceptions/: README.md  __init__.py  errors.py  handlers.py  validation_i18n.py
app/middlewares/: __init__.py  cors.py  gzip.py  jwt_auth.py
app/models/: base_model.py
app/repositories/: base_repo.py
app/schemas/: __init__.py  base_schema.py  response.py  user_schema.py
app/utils/: uuidv7.py
config/: __init__.py  app_config.py  cache_config.py  database_config.py  logger_config.py  settings.py
